--- a/Exercise_2_GPU.ipynb
+++ b/Exercise_2_GPU.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Code run on local GPU Nvidia GeForce MX150"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "y4Dr8LlSJMtp"
@@ -142,7 +149,9 @@
    "outputs": [],
    "source": [
     "#bs = 64\n",
-    "bs = 16   # uncomment this line if you run out of memory even after clicking Kernel->Restart"
+    "bs = 16   # uncomment this line if you run out of memory even after clicking Kernel->Restart\n",
+    "# 64 was too much for my local GPU, I haven't tried 32 yet. \n",
+    "# Had to restart the kernel and/or empty the cache when changing models as GPU memory was full"
    ]
   },
   {
