added more comments

--- a/Notebook_tutorial.ipynb
+++ b/Notebook_tutorial.ipynb
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "!ls \"/content/drive/My Drive/fastai\""
+    "!ls \"/content/drive/My Drive/fastai\" # looking at files in the repository when using the notebook in colab"
    ]
   },
   {
@@ -637,7 +637,7 @@
    "source": [
     "# Import necessary libraries\n",
     "from fastai.vision import * \n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt #library for graphics"
    ]
   },
   {
@@ -650,7 +650,7 @@
    },
    "outputs": [],
    "source": [
-    "from PIL import Image"
+    "from PIL import Image # library for images"
    ]
   },
   {
@@ -713,7 +713,7 @@
    ],
    "source": [
     "plt.plot([a,d,c,b])\n",
-    "plt.show()"
+    "plt.show() #necessary to print the graph"
    ]
   },
   {
@@ -748,7 +748,8 @@
     }
    ],
    "source": [
-    "Image.open(r\"C:\\Users\\jacin\\Pictures\\treeofvoices.jpg\") #runtime disconnected, doesn't show errors nor the image"
+    "Image.open(r\"C:\\Users\\jacin\\Pictures\\treeofvoices.jpg\") #loading local image\n",
+    "#when using an image file in colab : runtime disconnected, doesn't show errors nor the image"
    ]
   },
   {
@@ -783,7 +784,7 @@
     }
    ],
    "source": [
-    "from google.colab import drive\n",
+    "from google.colab import drive #allows colab access to google drive\n",
     "drive.mount('/content/drive')"
    ]
   },
@@ -1334,7 +1335,7 @@
     "for i in range(2000):\n",
     "    a = i+1\n",
     "    b = 'string'\n",
-    "    c = b+1"
+    "    c = b+1 "
    ]
   },
   {
@@ -1360,7 +1361,7 @@
     }
    ],
    "source": [
-    "%debug"
+    "%debug # error happens in the previous cell because b is a string and it's not possible to add a string to an int"
    ]
   },
   {
