--- a/Exercise_2_GPU.ipynb
+++ b/Exercise_2_GPU.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Code run on local GPU Nvidia GeForce MX150"
+    "#### *Code run on local GPU Nvidia GeForce MX150*"
    ]
   },
   {
@@ -29,6 +29,13 @@
     "In this lesson we will build our first image classifier from scratch, and see if we can achieve world-class results. Let's dive in!\n",
     "\n",
     "Every notebook starts with the following three lines; they ensure that any edits to libraries you make are reloaded here automatically, and also that any charts or images displayed are shown in this notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*When running in colab, use the next two cells*"
    ]
   },
   {
@@ -230,7 +237,7 @@
     }
    ],
    "source": [
-    "path = untar_data(URLs.PETS); path"
+    "path = untar_data(URLs.PETS); path # downloading and extracting data"
    ]
   },
   {
@@ -259,7 +266,7 @@
     }
    ],
    "source": [
-    "path.ls()"
+    "path.ls() # checking folders are in order"
    ]
   },
   {
@@ -272,6 +279,7 @@
    },
    "outputs": [],
    "source": [
+    "#assigning paths\n",
     "path_anno = path/'annotations'\n",
     "path_img = path/'images'"
    ]
@@ -318,6 +326,7 @@
     }
    ],
    "source": [
+    "# getting files\n",
     "fnames = get_image_files(path_img)\n",
     "fnames[:6]"
    ]
@@ -346,6 +355,7 @@
    },
    "outputs": [],
    "source": [
+    "# Make dataset from files, normalize them so they are the same size\n",
     "data = ImageDataBunch.from_name_re(path_img, fnames, pat, ds_tfms=get_transforms(), size=224, bs=bs\n",
     "                                  ).normalize(imagenet_stats)"
    ]
@@ -377,7 +387,7 @@
     }
    ],
    "source": [
-    "data.show_batch(rows=4, figsize=(8,8))"
+    "data.show_batch(rows=4, figsize=(8,8)) #looking at a few files to check"
    ]
   },
   {
@@ -412,7 +422,7 @@
     }
    ],
    "source": [
-    "print(data.classes)\n",
+    "print(data.classes) # looking at the classes\n",
     "len(data.classes),data.c"
    ]
   },
@@ -462,7 +472,7 @@
    },
    "outputs": [],
    "source": [
-    "learn = cnn_learner(data, models.resnet34, metrics=error_rate)"
+    "learn = cnn_learner(data, models.resnet34, metrics=error_rate) #our model"
    ]
   },
   {
@@ -643,7 +653,7 @@
     }
    ],
    "source": [
-    "learn.model"
+    "learn.model #print to look at details"
    ]
   },
   {
@@ -713,7 +723,7 @@
     }
    ],
    "source": [
-    "learn.fit_one_cycle(4)"
+    "learn.fit_one_cycle(4) #train on 4 epochs"
    ]
   },
   {
@@ -788,7 +798,7 @@
     }
    ],
    "source": [
-    "interp = ClassificationInterpretation.from_learner(learn)\n",
+    "interp = ClassificationInterpretation.from_learner(learn) #interpret the losses\n",
     "\n",
     "losses,idxs = interp.top_losses()\n",
     "\n",
@@ -822,7 +832,7 @@
     }
    ],
    "source": [
-    "interp.plot_top_losses(9, figsize=(15,11))"
+    "interp.plot_top_losses(9, figsize=(15,11)) #look at a few pictures to let a human evaluate"
    ]
   },
   {
@@ -882,7 +892,7 @@
     }
    ],
    "source": [
-    "interp.plot_confusion_matrix(figsize=(12,12), dpi=60)"
+    "interp.plot_confusion_matrix(figsize=(12,12), dpi=60) #let's see where the model is least efficient"
    ]
   },
   {
@@ -929,7 +939,7 @@
     }
    ],
    "source": [
-    "interp.most_confused(min_val=2)"
+    "interp.most_confused(min_val=2) #another way to see things"
    ]
   },
   {
@@ -1011,7 +1021,7 @@
     }
    ],
    "source": [
-    "learn.fit_one_cycle(1)"
+    "learn.fit_one_cycle(1) #things have gotten better"
    ]
   },
   {
@@ -1242,7 +1252,8 @@
    "outputs": [],
    "source": [
     "data = ImageDataBunch.from_name_re(path_img, fnames, pat, ds_tfms=get_transforms(),\n",
-    "                                   size=199, bs=6).normalize(imagenet_stats)"
+    "                                   size=199, bs=6).normalize(imagenet_stats) #prepare the data again for a new model. \n",
+    "#I made the images and the batches smaller to process faster"
    ]
   },
   {
@@ -1699,7 +1710,7 @@
     }
    ],
    "source": [
-    "path = untar_data(URLs.MNIST_SAMPLE); path"
+    "path = untar_data(URLs.MNIST_SAMPLE); path #load a new dataset"
    ]
   },
   {
@@ -2096,7 +2107,7 @@
    ],
    "source": [
     "data = ImageDataBunch.from_name_func(path, fn_paths, ds_tfms=tfms, size=24,\n",
-    "        label_func = lambda x: '3' if '/3/' in str(x) else '7')\n",
+    "        label_func = lambda x: '3' if '/3/' in str(x) else '7') #telling how to distribute labels on images\n",
     "data.classes"
    ]
   },
