--- a/Notebook_tutorial.ipynb
+++ b/Notebook_tutorial.ipynb
@@ -749,7 +749,8 @@
    ],
    "source": [
     "Image.open(r\"C:\\Users\\jacin\\Pictures\\treeofvoices.jpg\") #loading local image\n",
-    "#when using an image file in colab : runtime disconnected, doesn't show errors nor the image"
+    "#when using an image file in colab : runtime disconnected, doesn't show errors nor the image\n",
+    "#in colab, using a smaller png file worked"
    ]
   },
   {
